// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`widget-wrapper Renders \`widget-wrapper\` with default props 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <alarms-list-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with editing mode 1`] = `
<div
  style="min-height: 40px;"
>
  <div
    class="v-card__title widget-title pa-2"
  >
    <div
      class="layout justify-space-between align-center"
    >
      <div
        class="flex"
      >
        <h4
          class="ml-2 font-weight-regular"
        >
        </h4>
      </div>
      <div
        class="spacer"
      />
    </div>
  </div>
  <hr
    aria-orientation="horizontal"
    class="v-divider theme--light"
    role="separator"
  />
  <div
    class="v-card__text pa-0 position-relative"
  >
    <alarms-list-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with title and editing mode 1`] = `
<div
  style="min-height: 40px;"
>
  <div
    class="v-card__title widget-title pa-2"
  >
    <div
      class="layout justify-space-between align-center"
    >
      <div
        class="flex"
      >
        <h4
          class="ml-2 font-weight-regular"
        >
            Title
        </h4>
      </div>
      <div
        class="spacer"
      />
    </div>
  </div>
  <hr
    aria-orientation="horizontal"
    class="v-divider theme--light"
    role="separator"
  />
  <div
    class="v-card__text pa-0 position-relative"
  >
    <alarms-list-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type AlarmStatistics and cat edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <alarm-statistics-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type AlarmStatistics and core edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <c-alert-overlay-stub
      message="Stats widgets are not available with 'community' edition"
      tab-id="tab-id"
      value="true"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type AlarmsList and cat edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <alarms-list-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type AlarmsList and core edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <alarms-list-widget-stub
      message="Stats widgets are not available with 'community' edition"
      tabid="tab-id"
      value="true"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type BarChart and cat edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <bar-chart-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type BarChart and core edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <bar-chart-widget-stub
      message="Stats widgets are not available with 'community' edition"
      tabid="tab-id"
      value="true"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type Context and cat edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <entities-list-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type Context and core edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <entities-list-widget-stub
      message="Stats widgets are not available with 'community' edition"
      tabid="tab-id"
      value="true"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type Counter and cat edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <counter-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type Counter and core edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <counter-widget-stub
      message="Stats widgets are not available with 'community' edition"
      tabid="tab-id"
      value="true"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type Junit and cat edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <testing-weather-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type Junit and core edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <c-alert-overlay-stub
      message="Stats widgets are not available with 'community' edition"
      tab-id="tab-id"
      value="true"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type LineChart and cat edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <line-chart-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type LineChart and core edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <line-chart-widget-stub
      message="Stats widgets are not available with 'community' edition"
      tabid="tab-id"
      value="true"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type Map and cat edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <map-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type Map and core edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <c-alert-overlay-stub
      message="Stats widgets are not available with 'community' edition"
      tab-id="tab-id"
      value="true"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type Numbers and cat edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <numbers-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type Numbers and core edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <numbers-widget-stub
      message="Stats widgets are not available with 'community' edition"
      tabid="tab-id"
      value="true"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type PieChart and cat edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <pie-chart-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type PieChart and core edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <pie-chart-widget-stub
      message="Stats widgets are not available with 'community' edition"
      tabid="tab-id"
      value="true"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type ServiceWeather and cat edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <service-weather-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type ServiceWeather and core edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <service-weather-widget-stub
      message="Stats widgets are not available with 'community' edition"
      tabid="tab-id"
      value="true"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type StatsCalendar and cat edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <stats-calendar-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type StatsCalendar and core edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <c-alert-overlay-stub
      message="Stats widgets are not available with 'community' edition"
      tab-id="tab-id"
      value="true"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type Text and cat edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <text-widget-stub
      tab-id="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type Text and core edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <text-widget-stub
      message="Stats widgets are not available with 'community' edition"
      tab-id="tab-id"
      value="true"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type UserStatistics and cat edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <user-statistics-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with type UserStatistics and core edition 1`] = `
<div
  style="min-height: 40px;"
>
  <!---->
  <div
    class="v-card__text pa-0 position-relative"
  >
    <c-alert-overlay-stub
      message="Stats widgets are not available with 'community' edition"
      tab-id="tab-id"
      value="true"
      widget="[object Object]"
    />
  </div>
</div>
`;

exports[`widget-wrapper Renders \`widget-wrapper\` with widget title 1`] = `
<div
  style="min-height: 40px;"
>
  <div
    class="v-card__title widget-title pa-2"
  >
    <div
      class="layout justify-space-between align-center"
    >
      <div
        class="flex"
      >
        <h4
          class="ml-2 font-weight-regular"
        >
            Title
        </h4>
      </div>
      <div
        class="spacer"
      />
    </div>
  </div>
  <hr
    aria-orientation="horizontal"
    class="v-divider theme--light"
    role="separator"
  />
  <div
    class="v-card__text pa-0 position-relative"
  >
    <alarms-list-widget-stub
      tabid="tab-id"
      widget="[object Object]"
    />
  </div>
</div>
`;
